[package]
name = "viav"
version = "0.1.0"
authors = ["Brandon Dyer <BrandonDyer64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4"
tokio  = { version = "0.2", features = ["macros", "rt-threaded"] }

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity.git"
branch = "await"
