[package]
authors = ["Brandon Dyer <BrandonDyer64@gmail.com>"]
edition = "2018"
name = "viav"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
dotenv = "0.15.0"
futures = "0.3.4"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4"
serenity = "0.9.0-rc.4"

[dependencies.tokio]
features = ["macros", "rt-threaded", "time"]
version = "0.2"
